# JadeLang

./: README.md
jade/jscc/include/: codegen.hpp  import_resolver.hpp  lexer.hpp  parser.hpp  sema.hpp
jade/jscc/src/: codegen.cpp
jade_stdlib/: meson.build
jade_stdlib/gc/: gc.cpp  gc.hpp
jade_stdlib/include/: interp.hpp
jade_stdlib/src/: collections.cpp  fs.cpp  interp.cpp  io.cpp  math.cpp  os.cpp  test_stdlib.cpp
jpkg/: commands.py  config.py  jpkg.py  registry.py
jscc/: meson.build
jscc/include/: ast.hpp  error.hpp
jscc/src/: error.cpp  import_resolver.cpp  lexer.cpp  main.cpp  parser.cpp  sema.cpp
jvk/: LICENSE  meson.build
jvk/hal/: hal_linux.cpp  hal_macos.cpp  hal_windows.cpp
jvk/include/: hal.hpp  joc_loader.hpp  runtime.hpp
jvk/src/: joc_loader.cpp  main.cpp  runtime.cpp
